a lot of stuff, new blocks

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Slab:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="preload"
       href="https://fonts.gstatic.com/s/playfairdisplay/v20/3qxkJm0G3mTlbyi6MyEV8w.woff2"
