added seo optimization

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prano</title>
 
+    <meta name="description" content="Доступні послуги прання і хімчистки преміум якості. Швидко і зручно." />
+    <meta name="keywords" content="Прання, Послуги прання, хімчистка, прання доставка, Львів" />
+    <meta property="og:title" content="Prano" />
+    <meta property="og:description" content="Доступна і швидка доставка у Львові" />
+    <meta property="og:image" content="./src/assets/logo/favicon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
