--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="Прання, Послуги прання, хімчистка, прання доставка, Львів" />
     <meta property="og:title" content="Prano" />
     <meta property="og:description" content="Доступна і швидка доставка у Львові" />
-    <meta property="og:image" content="./src/assets/logo/favicon.png" />
+    <meta property="og:image" content="https://prano.group/assets/logo/favicon.png" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
