--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="Прання, Послуги прання, хімчистка, прання доставка, Львів" />
     <meta property="og:title" content="Prano" />
     <meta property="og:description" content="Доступна і швидка доставка у Львові" />
-    <meta property="og:image" content="https://prano.group/assets/logo/favicon.png" />
+    <meta property="og:image" content="https://prano.group/assets/logo/preview.png" />
+    <meta property="og:url" content="https://prano.group/" />
+    <meta property="og:type" content="website" />
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
