--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,9 @@
     <meta property="og:type" content="website" />
 
 
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="a6jaF6YvCswbVp54QJuGRw" async></script>
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
