--- a/site/index.html
+++ b/site/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/logo/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prano</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/logo/favicon.png" />
 
-    <meta name="description" content="Доступні послуги прання і хімчистки преміум якості. Швидко і зручно." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Prano — Пральня та Хімчистка у Львові | Доступні Послуги Прання</title>
+
+
+    <meta name="description" content="Пральня та хімчистка преміум якості у Львові. Замовляйте доступне та швидке прання з доставкою від Prano." />
     <meta name="keywords" content="Прання, Послуги прання, хімчистка, прання доставка, Львів" />
     <meta property="og:title" content="Prano" />
-    <meta property="og:description" content="Доступна і швидка доставка у Львові" />
-    <meta property="og:image" content="https://prano.group/assets/logo/preview.png" />
+    <meta property="og:description" content=" Prano - Доступна і швидка Пральня у Львові" />
+    <meta property="og:image" content="https://prano.group/assets/logo/favicon.png" />
     <meta property="og:url" content="https://prano.group/" />
     <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://prano.group/" />
 
 
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="a6jaF6YvCswbVp54QJuGRw" async></script>
