new settings for seo

--- a/site/index.html
+++ b/site/index.html
@@ -10,30 +10,60 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- CHANGED -->
     <title>
-      Prano — Пральня та Хімчистка у Львові | Доступні Послуги Прання
+      Prano — хімчистка у Львові | Послуги хімчистки, ремонту взуття та прання
     </title>
 
     <meta
       name="description"
-      content="Пральня та хімчистка преміум якості у Львові. Замовляйте доступне та швидке прання з доставкою від Prano."
+      content="Пральня та хімчистка преміум якості у Львові. Замовляйте швидку хімчистку з доставкою від Prano"
     />
     <meta
       name="keywords"
-      content="Прання, Послуги прання, хімчистка, прання доставка, Львів"
+      content="Прання, Послуги хімчистки, хімчистка, хімчистка доставка, Львів"
     />
+
     <meta property="og:title" content="Prano" />
     <meta
       property="og:description"
-      content=" Prano - Доступна і швидка Пральня у Львові"
+      content="Prano - хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
     />
+
+    <!-- CHANGED: основне прев’ю -->
     <meta
       property="og:image"
-      content="https://prano.group/assets/logo/favicon.png"
+      content="https://prano.group/assets/preview.png"
     />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- CHANGED: квадратне прев’ю -->
+    <meta
+      property="og:image"
+      content="https://prano.group/assets/preview-square.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+
     <meta property="og:url" content="https://prano.group/" />
     <meta property="og:type" content="website" />
     <link rel="canonical" href="https://prano.group/" />
+
+    <!-- CHANGED: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Prano" />
+    <meta
+      name="twitter:description"
+      content="Prano - хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
+    />
+    <meta
+      name="twitter:image"
+      content="https://prano.group/assets/preview.png"
+    />
 
     <script
       src="https://analytics.ahrefs.com/analytics.js"
