--- a/site/index.html
+++ b/site/index.html
@@ -110,6 +110,20 @@
       <div class=""></div>
     </div>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H6W4JW7GW4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H6W4JW7GW4");
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
