--- a/site/index.html
+++ b/site/index.html
@@ -124,6 +124,20 @@
 
       gtag("config", "G-H6W4JW7GW4");
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17424095669"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-17424095669");
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
