--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@
       data-key="a6jaF6YvCswbVp54QJuGRw"
       async
     ></script>
-
+    <script src="https://t.contentsquare.net/uxa/c066223d9bf98.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -129,7 +129,7 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-17424095669"
     ></script>
-    
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
