--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
 
     <!-- CHANGED -->
     <title>
-      Prano — хімчистка у Львові | Послуги хімчистки, ремонту взуття та прання
+      Prano — преміум хімчистка у Львові | Послуги хімчистки, ремонту взуття та прання
     </title>
 
     <meta
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Prano" />
     <meta
       property="og:description"
-      content="Prano - хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
+      content="Prano - преміум хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
     />
 
     <!-- CHANGED: основне прев’ю -->
@@ -58,7 +58,7 @@
     <meta name="twitter:title" content="Prano" />
     <meta
       name="twitter:description"
-      content="Prano - хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
+      content="Prano - преміум хімчистка, пральня, реставрація взуття і сумок. Преміум-сервіс у Львові"
     />
     <meta
       name="twitter:image"
